--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "slugify": "^1.6.5"
+  },
+  "devDependencies": {
+    "supertest": "^6.2.3"
   }
 }
